<resources>
    <string name="app_name">Connectify</string>
    <string name="app_logo">App Logo</string>
    <string name="pin_entry_description">Enter your 6-digit PIN</string>
    <string name="welcome_to_connectify">Welcome to Connectify</string>
    <string name="read_our_privacy_policy_tap_agree_and_continue_to_accept_terms_of_services">Read our Privacy Policy. Tap “Agree and Continue” to accept Terms of Services</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="did_you_have_an_account">Did you have an Account?</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="back_arrow_icon">Back Arrow Icon</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="code_has_been_sent_to">Code has been sent to</string>
    <string name="resend_code_in">Resend Code in</string>
    <string name="_52_s">52 S</string>
    <string name="verify">Verify</string>
    <string name="_0000_0000_00">0000_0000_00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="_8_00_am">8:00 AM</string>
    <string name="rohit">Rohit</string>
    <string name="kesa_h_bhai">kesa h bhai</string>
    <string name="group1">Group1</string>
    <string name="_2_min_ago">2 min ago</string>
    <string name="read_our">Read our</string>
    <string name="privacy_policy">" Privacy Policy. "</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_your_password">Create your password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="sign_in_up">Sign In / Up</string>
    <string name="register_or_login">Register or Login</string>
    <string name="let_me_in">Let me in</string>
    <string name="username">Username</string>
    <string name="search_user">Search User</string>
    <string name="write_message_here">write message here</string>
    <string name="thik_hu_bhai">thik hu bhai</string>
    <string name="update_profile">Update Profile</string>
    <string name="_10_00">10:00</string>
    <string name="status">Status Not Implemented Yet!!</string>
    <string name="groups">Groups Not Implemented Yet!!</string>
    <string name="calls">Calls Not Implemented Yet!!</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="video">Video</string>
    <string name="download">Download</string>
    <string name="file">File</string>
</resources>