<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView android:text="@string/choose_an_option"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button android:id="@+id/option_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera" />

    <Button android:id="@+id/option_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery" />

    <Button android:id="@+id/option_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video" />

</LinearLayout>
