<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/app_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_connectify"
        android:textSize="25sp"
        android:textColor="@color/text_primary"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_secondary"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/read_our_privacy_policy_tap_agree_and_continue_to_accept_terms_of_services"/>

    <Button
        android:id="@+id/agree_continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_and_continue"
        android:backgroundTint="@color/send_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/text_primary_night"
        android:layout_marginTop="70dp"
        />

</LinearLayout>