<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/background_light"
    tools:context=".UserRegister">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/app_logo"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/text_primary_light"
        android:layout_marginBottom="40dp"
        android:text="@string/register_or_login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/text_secondary_light"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_your_name"/>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        android:textColor="@color/text_primary_light"
        android:layout_marginBottom="30dp"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/send_btn_light"
        android:textColor="@color/text_primary_d_light"
        android:text="@string/let_me_in"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

</LinearLayout>