<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:baselineAligned="false"
    android:elevation="2dp"
    android:background="@color/background_light"
    android:layout_height="wrap_content">

    <include layout="@layout/profile_pic_view"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/user_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp"
                android:textColor="@color/text_primary_light"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/last_message_time_txt"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/text_secondary_light"
                android:text="@string/_10_00"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/last_message_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/text_secondary_light"
                android:text="@string/_0000_0000_00"/>
            <ImageView
                android:id="@+id/last_message_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image"
                android:visibility="gone"
                android:contentDescription="@string/todo" />
            <TextView
                android:id="@+id/image_description_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textColor="@color/text_secondary_light"
                android:visibility="gone"
                android:text="@string/_0000_0000_00"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>