<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/toolbar_background"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/back_arrow_icon_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_arrow"
            android:contentDescription="@string/todo"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/toolbar_text"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/back_arrow_icon_btn"
            android:text="@string/update_profile"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@color/background"
        android:contentDescription="@string/todo"
        android:src="@drawable/man_4"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:layout_marginTop="50dp"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/text_secondary"
        android:hint="@string/phone_number"
        android:enabled="false"
        android:padding="10dp"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <Button
            android:id="@+id/profile_update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/send_btn"
            android:textColor="@color/text_primary_night"
            android:text="@string/update_profile"
            android:textAllCaps="true" />
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:progressTint="@color/progress_color"
            android:layout_gravity="center"
            android:id="@+id/profile_progress_bar"/>
    </LinearLayout>


</LinearLayout>