<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SearchUserActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/toolbar_background"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/back_arrow_icon_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_arrow"
            android:contentDescription="@string/todo"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/toolbar_text"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/back_arrow_icon_btn"
            android:text="@string/search_user"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_user_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:inputType="text"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:textColor="@color/text_primary"
            android:hint="@string/username"
            android:layout_toStartOf="@id/search_user_btn"
            android:layout_margin="10dp"/>
        <ImageView
            android:id="@+id/search_user_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/magnifying_glass"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_user_recycler_view"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content" />
</LinearLayout>