<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background_light"
    tools:context=".DirectChatActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/toolbar_background_light"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/back_arrow_icon_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/todo"
            android:src="@drawable/back_arrow"
            tools:ignore="TouchTargetSizeCheck" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/profile_pic"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/other_username"
                android:layout_height="wrap_content"
                android:textColor="@color/toolbar_text_light"
                android:layout_width="wrap_content"
                android:text="@string/username"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/user_status"
                android:layout_height="wrap_content"
                android:textColor="@color/toolbar_text_light"
                android:layout_width="wrap_content"
                android:textSize="10sp" />
        </LinearLayout>
        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/back_arrow_icon_btn"
            android:src="@drawable/man_3"
            android:scaleType="centerCrop"/>
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/direct_chat_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom_layout"
        />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:padding="8dp" >

        <EditText
            android:id="@+id/chat_message_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:layout_toStartOf="@id/message_send_btn"
            android:autofillHints="TODO"
            android:background="@color/white"
            android:elevation="4dp"
            android:drawableEnd="@drawable/baseline_attach_file_24"
            android:hint="@string/write_message_here"
            android:inputType=""
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingEnd="38dp"
            android:textColor="@color/text_primary_light"
            tools:ignore="TouchTargetSizeCheck" />
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/send"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            app:tint="@color/send_btn_light"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/message_send_btn"
            android:padding="8dp" />
    </RelativeLayout>

</RelativeLayout>